feat: persoanlize about me page

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,5 +1,6 @@
 /* hero */
 .hero {
+  padding-top: 2em;
   margin-bottom: 3em;
 }
 
@@ -7,6 +8,7 @@
   width: 180px;
   height: 180px;
   margin: 1.5em 0;
+  border-radius: 50%;
 }
 
 .hero__title {
